<?xml version="1.0"?>
<package>
  <name>provider_imu</name>
  <version>0.0.0</version>
  <description>The provider_imu package</description>

  <maintainer email="dozois.a@gmail.com">Antoine Dozois</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sonia_msgs</build_depend>
  <build_depend>lib_atlas</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>log4cxx</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sonia_msgs</run_depend>
  <run_depend>lib_atlas</run_depend>
</package>
