<?xml version="1.0"?>
<package>
  <name>provider_imu</name>
  <version>1.2.4</version>
  <description>The provider_imu package </description>

  <author>Thibaut Mattio</author>

  <maintainer email="log.club.sonia@etsmtl.net">Software Team Leader</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sonia_common</run_depend>
</package>
